--- a/pages/contratos.html
+++ b/pages/contratos.html
@@ -1,4 +1,3 @@
-<!-- contratos.html-->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -19,8 +18,7 @@
                 <ul>
                     <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                     <li class="active"><a href="contratos.html"><i class="fas fa-file-contract"></i> Contratos</a></li>
-                    <li><a href="inquilinos.html"><i class="fas fa-users"></i> Inquilinos</a></li>
-                    <li><a href="propietarios.html"><i class="fas fa-user-tie"></i> Propietarios</a></li>
+                    <li><a href="inquilinos.html"><i class="fas fa-users"></i> Usuarios</a></li>
                    <li><a href="cuartos-muebles.html"><i class="fas fa-door-closed"></i> Cuartos y Muebles</a></li>
                    <li><a href="mantenimiento.html"><i class="fas fa-tools"></i> Mantenimiento</a></li>
                     <li><a href="bitacora.html"><i class="fas fa-clipboard-list"></i> Bitácora</a></li>
@@ -102,7 +100,12 @@
                             </tr>
                         </thead>
                         <tbody id="contratosTableBody">
-                            <!-- Los datos se cargarán dinámicamente -->
+                            <tr>
+                                <td colspan="8" style="text-align: center; padding: 40px;">
+                                    <i class="fas fa-spinner fa-spin" style="font-size: 48px; color: var(--gray); margin-bottom: 15px;"></i>
+                                    <p>Cargando contratos...</p>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -120,7 +123,7 @@
             <form id="contratoForm">
                 <div class="form-grid">
                     <div class="form-group">
-                        <label for="idInquilino">Inquilino *</label>
+                        <label for="idInquilino">Inquilino (Usuario Rol 2) *</label>
                         <select id="idInquilino" name="idInquilino" required>
                             <option value="">Cargando inquilinos...</option>
                         </select>
@@ -150,10 +153,10 @@
                     <div class="form-group">
                         <label for="estadoContrato">Estado</label>
                         <select id="estadoContrato" name="estadoContrato">
-                            <option value="ACTIVO">Activo</option>
-                            <option value="INACTIVO">Inactivo</option>
-                            <option value="PENDIENTE">Pendiente</option>
-                            <option value="FINALIZADO">Finalizado</option>
+                            <option value="activo">Activo</option>
+                            <option value="finalizado">Finalizado</option>
+                            <option value="cancelado">Cancelado</option>
+                            <option value="suspendido">Suspendido</option>
                         </select>
                     </div>
                 </div>
